kubernetes/apps/uc-intg-manager/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uc-intg-manager-ingress
spec:
  entryPoints:
    - websecure
  ingressClassName: traefik-internal
  routes:
    - match: Host(`uc-intg-manager.home.lungoo.de`)
      kind: Rule
      services:
        - name: uc-intg-manager-service
          port: 9999
